# motoko-openapi-client-gen

./: .gitignore  .gitmodules  README.md  flake.nix  yamaha-musiccast-api.yaml
.claude/: VETKEYS_INTEGRATION_PLAN.md  VETKEYS_SECURITY_ANALYSIS.md
.claude/plans/: g-suites.md  mops-upload.md  motoko-codegen-toCandidValue.md  patch.md  put-delete.md
.claude/skills/generate/: SKILL.md
.claude/skills/new-client/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: motoko.yaml
modules/motoko-client-plugin/: pom.xml
samples/client/googlecalendar/motoko/: generate.sh  typecheck.sh
samples/client/googlemail/motoko/: generate.sh  typecheck.sh
samples/client/httpbin-auth/motoko/: README.md
samples/client/httpbin-auth/motoko-test/: deploy.sh  dfx.json  generate.sh  main.mo  mops.toml  test.mo  typecheck.sh
samples/client/jsonplaceholder/motoko-test/: generate.sh  typecheck.sh
samples/client/openai/motoko/: generate.sh  typecheck.sh
samples/client/petstore/motoko/: README.md  mops.toml  typecheck.sh
samples/client/petstore/motoko-nodfx/: README.md  mops.toml
samples/client/spotify/motoko/: .gitignore  generate.sh  typecheck.sh
samples/client/tmdb/motoko/: generate.sh  typecheck.sh
samples/client/twilio/motoko/: generate.sh  typecheck.sh
samples/client/weatherapi/motoko/: generate.sh  typecheck.sh
samples/client/x/motoko/: generate.sh  typecheck.sh
samples/client/yamaha-musiccast/motoko-test/: deploy.sh  generate.sh  mops.toml
tools/spec-merge/: dune-project
tools/spec-merge/lib/: dune  merge.ml
(+48 files in other folders)
